--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unocss-preset-patch",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Collection of feature presets not integrated into UnoCSS.",
   "author": "Chris <https://github.com/zyyv>",
   "license": "MIT",
@@ -13,7 +13,10 @@
   "bugs": {
     "url": "https://github.com/zyyv/unocss-preset-patch/issues"
   },
-  "keywords": ["unocss", "unocss-preset"],
+  "keywords": [
+    "unocss",
+    "unocss-preset"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
